[gd_scene load_steps=19 format=3 uid="uid://cbksm33ruhkyo"]

[ext_resource type="Script" path="res://main/BaseUiScene.gd" id="1_2sfg5"]
[ext_resource type="PackedScene" uid="uid://c2r0cwflbfwf6" path="res://mines/stonemine/StoneClickerScene.tscn" id="2_e76hg"]
[ext_resource type="PackedScene" uid="uid://d4d4gvho1g7qj" path="res://mines/coppermine/RawCopperClickerScene.tscn" id="3_rfky2"]
[ext_resource type="PackedScene" uid="uid://c2oo4ppfxb1w7" path="res://mines/coalmine/CoalClickerScene.tscn" id="4_2mc48"]
[ext_resource type="PackedScene" uid="uid://bb83hu7saj16e" path="res://mines/ironmine/RawIronClickerScene.tscn" id="5_0r14b"]
[ext_resource type="Texture2D" uid="uid://4tc3lw2lwdlu" path="res://textures/stone_resource.png" id="5_t6ims"]
[ext_resource type="Texture2D" uid="uid://tbie2dxw2tq2" path="res://textures/coal_resource.png" id="6_ppter"]
[ext_resource type="Texture2D" uid="uid://eus5dihyklgy" path="res://textures/zerre_resource.png" id="6_ra6q4"]
[ext_resource type="Texture2D" uid="uid://ctpi17npg4q34" path="res://textures/raw_copper_resource.png" id="7_h5um4"]
[ext_resource type="Script" path="res://data/ResourceDataClass.gd" id="8_bm5li"]
[ext_resource type="Texture2D" uid="uid://ctph7qi2shfa8" path="res://textures/raw_iron_resource.png" id="9_7vyqw"]
[ext_resource type="Texture2D" uid="uid://bsesvs55kqt0f" path="res://textures/copper_matte_resource.png" id="10_rltgu"]
[ext_resource type="Texture2D" uid="uid://b68phbdv380yr" path="res://textures/pig_iron_resource.png" id="11_aifsg"]
[ext_resource type="PackedScene" uid="uid://djdss5k68xxkq" path="res://furnace/FurnaceScreen.tscn" id="13_d1j76"]
[ext_resource type="PackedScene" uid="uid://cvhj3u60j2qh8" path="res://merchant/MerchantScene.tscn" id="15_v5x0y"]
[ext_resource type="PackedScene" uid="uid://cnkohmvvrg6sv" path="res://achievements/AchievementScreen.tscn" id="16_lc1m6"]
[ext_resource type="Script" path="res://main/achievement_pop.gd" id="17_flnjc"]
[ext_resource type="Script" path="res://main/unlock_pop.gd" id="18_tkuvn"]

[node name="BaseUi" type="Control" node_paths=PackedStringArray("stoneMineButton", "copperMineButton", "coalMineButton", "rawIronMineButton", "furnaceButton", "merchantButton", "stoneClickerScene", "copperClickerScene", "coalClickerScene", "rawIronClickerScene", "furnaceScene", "stoneResourceLabel", "coalResourceLabel", "rawCopperResourceLabel", "rawIronResourceLabel", "copperMatteResourceLabel", "pigIronResourceLabel", "zerreLabel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_2sfg5")
stoneMineButton = NodePath("ContainerMines/MarginContainer/GridContainer/StoneMineButton")
copperMineButton = NodePath("ContainerMines/MarginContainer/GridContainer/CopperMineButton")
coalMineButton = NodePath("ContainerMines/MarginContainer/GridContainer/CoalMineButton")
rawIronMineButton = NodePath("ContainerMines/MarginContainer/GridContainer/RawIronMineButton")
furnaceButton = NodePath("ContainerMines/MarginContainer/GridContainer/FurnaceButton")
merchantButton = NodePath("ContainerMines/MarginContainer/GridContainer/MerchantButton")
stoneClickerScene = NodePath("Mines/StoneClickerScene")
copperClickerScene = NodePath("Mines/RawCopperClickerScene")
coalClickerScene = NodePath("Mines/CoalClickerScene")
rawIronClickerScene = NodePath("Mines/RawIronClickerScene")
furnaceScene = NodePath("FurnaceScreen")
stoneResourceLabel = NodePath("ContainerResources/MarginContainer/VBoxContainer/GridContainer/StoneResourceLabel")
coalResourceLabel = NodePath("ContainerResources/MarginContainer/VBoxContainer/GridContainer/CoalResourceLabel")
rawCopperResourceLabel = NodePath("ContainerResources/MarginContainer/VBoxContainer/GridContainer/RawCopperResourceLabel")
rawIronResourceLabel = NodePath("ContainerResources/MarginContainer/VBoxContainer/GridContainer/RawIronResourceLabel")
copperMatteResourceLabel = NodePath("ContainerResources/MarginContainer/VBoxContainer/GridContainer/CopperMatteResource")
pigIronResourceLabel = NodePath("ContainerResources/MarginContainer/VBoxContainer/GridContainer/PigIronResource")
zerreLabel = NodePath("ContainerResources/MarginContainer/VBoxContainer/GridContainerZerre/ZerreAmount")

[node name="Mines" type="Node" parent="."]

[node name="CoalClickerScene" parent="Mines" instance=ExtResource("4_2mc48")]
visible = false

[node name="RawCopperClickerScene" parent="Mines" instance=ExtResource("3_rfky2")]
visible = false

[node name="StoneClickerScene" parent="Mines" instance=ExtResource("2_e76hg")]
visible = false

[node name="RawIronClickerScene" parent="Mines" instance=ExtResource("5_0r14b")]
visible = false

[node name="ContainerResources" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 244.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ContainerResources"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="ContainerResources/MarginContainer"]
layout_mode = 2

[node name="GridContainerZerre" type="GridContainer" parent="ContainerResources/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="ZerreTexture" type="TextureRect" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainerZerre"]
layout_mode = 2
texture = ExtResource("6_ra6q4")
expand_mode = 2

[node name="ZerreAmount" type="Label" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainerZerre"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Zerre: 0"

[node name="GridContainer" type="GridContainer" parent="ContainerResources/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="StoneTexture" type="TextureRect" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
tooltip_text = "Basic resource, not really used for much. Can be sold though!"
texture = ExtResource("5_t6ims")
expand_mode = 2

[node name="StoneResourceLabel" type="Label" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 22
text = "Stone: 0"

[node name="SellButtonStone" type="Button" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
mouse_filter = 1
text = "SELL"

[node name="CoalTexture" type="TextureRect" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
tooltip_text = "Coal is a resource you gather to smelt as fuel or as ingredient to create even better resources!"
texture = ExtResource("6_ppter")

[node name="CoalResourceLabel" type="Label" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 22
text = "Coal: 0"

[node name="SellButtonCoal" type="Button" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SELL"

[node name="RawCopperTexture" type="TextureRect" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
tooltip_text = "The basic ingredient for tons of other stuff! "
texture = ExtResource("7_h5um4")

[node name="RawCopperResourceLabel" type="Label" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 22
text = "Raw copper: 0"

[node name="SellButtonRawCopper" type="Button" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SELL"

[node name="RawIronTexture" type="TextureRect" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("9_7vyqw")

[node name="RawIronResourceLabel" type="Label" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 22
text = "Raw Iron: 0"

[node name="SellButtonRawIron" type="Button" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SELL"

[node name="CopperMatteTexture" type="TextureRect" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("10_rltgu")

[node name="CopperMatteResource" type="Label" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Copper Matte: 0"

[node name="SellButtonCopperMatte" type="Button" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SELL"

[node name="PigIronTexture" type="TextureRect" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("11_aifsg")

[node name="PigIronResource" type="Label" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Pig Iron: 0"

[node name="SellButtonPigIron" type="Button" parent="ContainerResources/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SELL"

[node name="ContainerMines" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -124.0
offset_right = 180.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ContainerMines"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="ContainerMines/MarginContainer"]
layout_mode = 2

[node name="StoneMineButton" type="Button" parent="ContainerMines/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Stone Mine"

[node name="CopperMineButton" type="Button" parent="ContainerMines/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Copper Mine"

[node name="CoalMineButton" type="Button" parent="ContainerMines/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Coal Mine"

[node name="RawIronMineButton" type="Button" parent="ContainerMines/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Iron Mine
"

[node name="FurnaceButton" type="Button" parent="ContainerMines/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Furnace"

[node name="MerchantButton" type="Button" parent="ContainerMines/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Merchant"

[node name="AchievementButton" type="Button" parent="ContainerMines/MarginContainer/GridContainer"]
layout_mode = 2
text = "Achievements"

[node name="ResourceDataClass" type="Node" parent="."]
script = ExtResource("8_bm5li")

[node name="FurnaceScreen" parent="." instance=ExtResource("13_d1j76")]
visible = false
layout_mode = 1
offset_left = 3.0

[node name="MerchantScene" parent="." instance=ExtResource("15_v5x0y")]
visible = false
layout_mode = 1

[node name="AchievementScreen" parent="." instance=ExtResource("16_lc1m6")]
visible = false
layout_mode = 1
mouse_filter = 2

[node name="AchievementPop" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 55.0
offset_right = 180.0
offset_bottom = 105.0
grow_horizontal = 2
script = ExtResource("17_flnjc")

[node name="RichTextLabel" type="RichTextLabel" parent="AchievementPop"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="UnlockPop" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 120.0
offset_right = 180.0
offset_bottom = 150.0
grow_horizontal = 2
script = ExtResource("18_tkuvn")

[node name="RichTextLabel" type="RichTextLabel" parent="UnlockPop"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[connection signal="achievement_updated" from="." to="AchievementScreen" method="on_update_achievement"]
[connection signal="unlock_digger_stone" from="." to="Mines/StoneClickerScene" method="digger_button_show"]
[connection signal="unlock_pop" from="." to="UnlockPop" method="_on_unlock_gui_pop"]
[connection signal="unlock_speed_digger_stone" from="." to="Mines/StoneClickerScene" method="digger_speed_up_button_show"]
[connection signal="update_unlocks" from="." to="." method="_unlock_event"]
[connection signal="achievement_updated" from="Mines/CoalClickerScene" to="AchievementScreen" method="on_update_achievement"]
[connection signal="update_unlocks" from="Mines/CoalClickerScene" to="." method="_unlock_event"]
[connection signal="achievement_updated" from="Mines/StoneClickerScene" to="AchievementScreen" method="on_update_achievement"]
[connection signal="update_unlocks" from="Mines/StoneClickerScene" to="." method="_unlock_event"]
[connection signal="button_down" from="ContainerResources/MarginContainer/VBoxContainer/GridContainer/SellButtonStone" to="." method="_on_sell_button_stone_button_down"]
[connection signal="button_down" from="ContainerResources/MarginContainer/VBoxContainer/GridContainer/SellButtonCoal" to="." method="_on_sell_button_coal_button_down"]
[connection signal="button_down" from="ContainerResources/MarginContainer/VBoxContainer/GridContainer/SellButtonRawCopper" to="." method="_on_sell_button_raw_copper_button_down"]
[connection signal="button_down" from="ContainerResources/MarginContainer/VBoxContainer/GridContainer/SellButtonRawIron" to="." method="_on_sell_button_raw_iron_button_down"]
[connection signal="button_down" from="ContainerResources/MarginContainer/VBoxContainer/GridContainer/SellButtonCopperMatte" to="." method="_on_sell_button_copper_matte_button_down"]
[connection signal="button_down" from="ContainerResources/MarginContainer/VBoxContainer/GridContainer/SellButtonPigIron" to="." method="_on_sell_button_pig_iron_button_down"]
[connection signal="button_down" from="ContainerMines/MarginContainer/GridContainer/StoneMineButton" to="." method="_on_stone_mine_button_button_down"]
[connection signal="button_down" from="ContainerMines/MarginContainer/GridContainer/CopperMineButton" to="." method="_on_copper_mine_button_button_down"]
[connection signal="button_down" from="ContainerMines/MarginContainer/GridContainer/CoalMineButton" to="." method="_on_coal_mine_button_button_down"]
[connection signal="button_down" from="ContainerMines/MarginContainer/GridContainer/RawIronMineButton" to="." method="_on_raw_iron_mine_button_button_down"]
[connection signal="button_down" from="ContainerMines/MarginContainer/GridContainer/FurnaceButton" to="." method="_on_furnace_button_button_down"]
[connection signal="button_down" from="ContainerMines/MarginContainer/GridContainer/MerchantButton" to="." method="_on_merchant_button_button_down"]
[connection signal="button_down" from="ContainerMines/MarginContainer/GridContainer/AchievementButton" to="." method="_on_button_button_down"]
[connection signal="achievement_gui_pop" from="AchievementScreen" to="AchievementPop" method="_on_achievement_screen_achievement_gui_pop"]
